--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,10 @@ authors = ["BEN <benjamin.hill28@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+pyperclip = "^1.8.1"
 
 [tool.poetry.dev-dependencies]
+autopep8 = "^1.5.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
