--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["BEN <benjamin.hill28@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 pyperclip = "^1.8.1"
+pytest = "^6.2.2"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.5"
